--- a/style.css
+++ b/style.css
@@ -33,6 +33,46 @@ header{
     background-color: crimson;
     padding: 10px 15px;
     border-radius: 5px;
-    line-height: 80px;
     color: white;
+    width: 106px;
+    height: 21px;
+}
+.main{
+    width: 100%;
+}
+section{
+    width: 80%;
+    margin: 120px auto;
+    display: flex;
+}
+.contentpart{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    width: 40%;
+    color: black;
+}
+.contentpart h2{
+    font-size: 35px;
+}
+.contentpart p{
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    color: #707070;
+}
+.videopart{
+    width: 40%;
+    margin-left: 100px;
+}
+iframe{
+    border-radius: 10px;
+}
+.imgpart{
+    width: 40%;
+    margin-right: 100px;
+}
+.imgpart img{
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
 }
