--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
 }
+p{
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    color: #707070;
+}
 header{
     background-repeat: no-repeat;
     background-image: linear-gradient(90deg, #1A1A1A -0.7%, rgba(26, 26, 26, 0) 100%), url(./img/1278511-976895269.jpg);
@@ -23,10 +28,6 @@ header{
 }
 .headercontent h1{
     font-size: 55px;
-}
-.headercontent p{
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
 }
 .link-button{
     text-decoration: none;
@@ -55,11 +56,6 @@ section{
 .contentpart h2{
     font-size: 35px;
 }
-.contentpart p{
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    color: #707070;
-}
 .videopart{
     width: 40%;
     margin-left: 100px;
@@ -75,4 +71,62 @@ iframe{
     width: 100%;
     height: 400px;
     border-radius: 10px;
+}
+.description{
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+.description h1{
+    font-size: 37px;
+    margin-bottom: 20px;
+}
+article{
+    width: 80%;
+    margin: 120px auto;
+}
+.direct-help{
+    margin: 50px auto;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.direct-help-left{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.direct-help-right{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-left: 20px;
+}
+.direct-help-content{
+    background-color: #FEF4F5;;
+    display: flex;
+    padding: 22px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 3px 10px #e0dfe5;
+}
+.direct-help-content img{
+    width: 100px;
+    height: 100px;
+    padding-right: 28px;
+}
+.content-des{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.imgsection{
+    display: flex;
+    justify-content: space-evenly;
+}
+.imgsection img{
+    border-radius: 5px;
+    width: 30%;
 }
