--- a/style.css
+++ b/style.css
@@ -130,3 +130,43 @@ article{
     border-radius: 5px;
     width: 30%;
 }
+.zakat-fund{
+    display: flex;
+}
+.zakat-fund-card{
+    background-color: #FEF4F5;;
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 3px 8px #e0dfe5;
+    gap: 15px;
+    margin-right: 15px;
+}
+.zakat-fund-card img{
+    width: 100%;
+    height: 150px;
+    padding: 0;
+}
+.zakat-fund-card a{
+    color: crimson;
+}
+footer{
+    background-color: #0B0D17;
+    width: 100%;
+    text-align: center;
+    height: 150px;
+}
+footer h1{
+    font-family: 'Lobster', cursive;
+    color: crimson;
+    line-height: 3;
+    font-size: 30px;
+    font-weight: 500;
+}
+footer p{
+    font-family: 'Manrope', sans-serif;
+    color: #D9DBE1;
+    font-size: 8px;
+}
